<resources>
    <string name="app_name" translatable="false">Daltowacja</string>

    <!-- Buttons -->
    <string name="freeze">Freeze</string>
    <string name="unfreeze">Unfreeze</string>
    <string name="analyze">Analyze</string>
    <string name="color_selection">Select color</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact us</string>
    <string name="donate">Support us</string>

    <!-- Descriptions -->
    <string name="color_name">Color name</string>
    <string name="color_description">Color description</string>
    <string name="info_description">Our application allows distinguishing colors by analyzing the color in the center of the screen and the ability to extract a selected color after freezing the view.</string>

    <!-- Toasts -->
    <string name="no_email_app">No email app found</string>
    <string name="permissions_not_granted">Permissions not granted by the user</string>

    <!-- Images -->
    <string name="frozen_image_description">Frozen image</string>
    <string name="center_pointer">Pointer on the center</string>
    <string name="crosshair">Color selection crosshair</string>
    <string name="slider_description">Pointer\'s size</string>
    <string name="info_about_application">Button with information about application</string>
    <string name="expandable_menu">Expandable menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo_description">App logo</string>

    <!-- Theme Preferences -->
    <string name="appearance_header">Appearance</string>
    <string name="choose_theme">Choose theme</string>
    <string name="auto">Automatic</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>

    <!-- Colors mode -->
    <string name="basic">Basic</string>
    <string name="advanced">Advanced (recommended)</string>
    <string name="colors_mode">Colors range</string>
    <string name="colors_options">Colors options</string>

    <!-- Language selection -->
    <string name="language">Language</string>
    <string name="language_options">Select language</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>

</resources>