<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/choose_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/language_options_entries"
            app:entryValues="@array/language_options_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/colors_options">

        <ListPreference
            app:defaultValue="advanced"
            app:entries="@array/colors_mode_entries"
            app:entryValues="@array/colors_mode_values"
            app:key="colors_mode"
            app:title="@string/colors_mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>